Bug 1169753 - Remove favicons GUIDs. r=mak