toolkit/components/places/nsPlacesIndexes.h
@@ -113,15 +113,6 @@
   )
 
 /**
- * moz_favicons
- */
-
-#define CREATE_IDX_MOZ_FAVICONS_GUID \
-  CREATE_PLACES_IDX( \
-    "guid_uniqueindex", "moz_favicons", "guid", "UNIQUE" \
-  )
-
-/**
  * moz_keywords
  */
 
